26.aug (ws)
      - new selection dialog: element-properties->select->other
      - Before saving a file check for write permission. This gives a better error message
        when trying to save the demo score.
      - fix: "pasting to selected measure crashes"
25.aug (ws)
      - updated instruments.xml from Magnus Johansson
      - Changes in the text property dialog are now always applied to all selected elements of same
        type. Semantic and text of the checkbox "change all selected" is changed to
        "change all elements of same type".
      (db)
      - experiment with darker (more readable) colors for voices and out-of-range notes
      - reduce size of Preference window for small screen sizes
24.aug (ws)
      - new style element "show repeat bar line tip"
      - allow beaming of mix of tuplets and normal notes
      (la)
      - Save and restore maximized state of main window
23.aug (ws)
      - Changing the text style does not change existing text anymore. In older versions all
        text not modified by the user was changed to new style.
      - new feature: "change all selected" checkbox in text property dialog
      - fix: change text properties of lyrics
21.aug (ws)
      - fixes for beams & note entry
20.aug (ws)
      - enhanced cross staff beams
      - fix: "note entry of dotted eight notes skips beats"
19.aug (ws)
      - reorganize chord description files into one file which contains the list of known chords
        and different files which describe only the rendering
      - fix: reading tuplets from mscore 0.9.5 scores
      - fix: "note entry in 5/4 time crashes"
      - fix: "delete measure removes all measure before current selection of notes"
      - fix: "note entry of dotted quarter notes skips beats"
18.aug (ws)
      - make accidental names translatable
      - fix "delete selected measures"
      - fix: use current instrument settings when exporting audio
      - fix save/restore of dotted notes