@@ -12,8 +12,8 @@ UnderlineWidth: 102
 Ascent: 1638
 Descent: 410
 LayerCount: 2
-Layer: 0 0 "Back" 
-Layer: 1 0 "Fore" 
+Layer: 0 0 "Back"  1
+Layer: 1 0 "Fore"  0
 NeedsXUIDChange: 1
 XUID: [1021 643 1332458594 9570944]
 FSType: 8
@@ -21,7 +21,7 @@ OS2Version: 0
 OS2_WeightWidthSlopeOnly: 0
 OS2_UseTypoMetrics: 1
 CreationTime: 1238249710
-ModificationTime: 1245667836
+ModificationTime: 1251302595
 PfmFamily: 17
 TTFWeight: 500
 TTFWidth: 5
@@ -41,7 +41,7 @@ HheadAOffset: 1
 HheadDescent: 0
 HheadDOffset: 1
 OS2Vendor: 'PfEd'
-DEI: 0
+DEI: 91125
 LangName: 1033 "" "" "" "" "" "" "" "" "" "" "" "" "" "Copyright (c) 2009, Werner Schweer,,, (<ws@seh.de>),+AAoA-with Reserved Font Name MuseJazz.+AAoACgAA-This Font Software is licensed under the SIL Open Font License, Version 1.1.+AAoA-This license is copied below, and is also available with a FAQ at:+AAoA-http://scripts.sil.org/OFL+AAoACgAK------------------------------------------------------------+AAoA-SIL OPEN FONT LICENSE Version 1.1 - 26 February 2007+AAoA------------------------------------------------------------+AAoACgAA-PREAMBLE+AAoA-The goals of the Open Font License (OFL) are to stimulate worldwide+AAoA-development of collaborative font projects, to support the font creation+AAoA-efforts of academic and linguistic communities, and to provide a free and+AAoA-open framework in which fonts may be shared and improved in partnership+AAoA-with others.+AAoACgAA-The OFL allows the licensed fonts to be used, studied, modified and+AAoA-redistributed freely as long as they are not sold by themselves. The+AAoA-fonts, including any derivative works, can be bundled, embedded, +AAoA-redistributed and/or sold with any software provided that any reserved+AAoA-names are not used by derivative works. The fonts and derivatives,+AAoA-however, cannot be released under any other type of license. The+AAoA-requirement for fonts to remain under this license does not apply+AAoA-to any document created using the fonts or their derivatives.+AAoACgAA-DEFINITIONS+AAoAIgAA-Font Software+ACIA refers to the set of files released by the Copyright+AAoA-Holder(s) under this license and clearly marked as such. This may+AAoA-include source files, build scripts and documentation.+AAoACgAi-Reserved Font Name+ACIA refers to any names specified as such after the+AAoA-copyright statement(s).+AAoACgAi-Original Version+ACIA refers to the collection of Font Software components as+AAoA-distributed by the Copyright Holder(s).+AAoACgAi-Modified Version+ACIA refers to any derivative made by adding to, deleting,+AAoA-or substituting -- in part or in whole -- any of the components of the+AAoA-Original Version, by changing formats or by porting the Font Software to a+AAoA-new environment.+AAoACgAi-Author+ACIA refers to any designer, engineer, programmer, technical+AAoA-writer or other person who contributed to the Font Software.+AAoACgAA-PERMISSION & CONDITIONS+AAoA-Permission is hereby granted, free of charge, to any person obtaining+AAoA-a copy of the Font Software, to use, study, copy, merge, embed, modify,+AAoA-redistribute, and sell modified and unmodified copies of the Font+AAoA-Software, subject to the following conditions:+AAoACgAA-1) Neither the Font Software nor any of its individual components,+AAoA-in Original or Modified Versions, may be sold by itself.+AAoACgAA-2) Original or Modified Versions of the Font Software may be bundled,+AAoA-redistributed and/or sold with any software, provided that each copy+AAoA-contains the above copyright notice and this license. These can be+AAoA-included either as stand-alone text files, human-readable headers or+AAoA-in the appropriate machine-readable metadata fields within text or+AAoA-binary files as long as those fields can be easily viewed by the user.+AAoACgAA-3) No Modified Version of the Font Software may use the Reserved Font+AAoA-Name(s) unless explicit written permission is granted by the corresponding+AAoA-Copyright Holder. This restriction only applies to the primary font name as+AAoA-presented to the users.+AAoACgAA-4) The name(s) of the Copyright Holder(s) or the Author(s) of the Font+AAoA-Software shall not be used to promote, endorse or advertise any+AAoA-Modified Version, except to acknowledge the contribution(s) of the+AAoA-Copyright Holder(s) and the Author(s) or with their explicit written+AAoA-permission.+AAoACgAA-5) The Font Software, modified or unmodified, in part or in whole,+AAoA-must be distributed entirely under this license, and must not be+AAoA-distributed under any other license. The requirement for fonts to+AAoA-remain under this license does not apply to any document created+AAoA-using the Font Software.+AAoACgAA-TERMINATION+AAoA-This license becomes null and void if any of the above conditions are+AAoA-not met.+AAoACgAA-DISCLAIMER+AAoA-THE FONT SOFTWARE IS PROVIDED +ACIA-AS IS+ACIA, WITHOUT WARRANTY OF ANY KIND,+AAoA-EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO ANY WARRANTIES OF+AAoA-MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT+AAoA-OF COPYRIGHT, PATENT, TRADEMARK, OR OTHER RIGHT. IN NO EVENT SHALL THE+AAoA-COPYRIGHT HOLDER BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY,+AAoA-INCLUDING ANY GENERAL, SPECIAL, INDIRECT, INCIDENTAL, OR CONSEQUENTIAL+AAoA-DAMAGES, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING+AAoA-FROM, OUT OF THE USE OR INABILITY TO USE THE FONT SOFTWARE OR FROM+AAoA-OTHER DEALINGS IN THE FONT SOFTWARE." "http://scripts.sil.org/ofl" 
 DesignSize: 200 200-200 0
 Encoding: ISO8859-1
@@ -50,12 +50,12 @@ NameList: Adobe Glyph List
 DisplaySize: -72
 AntiAlias: 1
 FitToEm: 1
-WinInfo: 91 13 6
+WinInfo: 13 13 6
 Grid
 -336 -1434 m 0
   Named: "c" 
 EndSplineSet
-BeginChars: 256 27
+BeginChars: 256 31
 
 StartChar: A
 Encoding: 65 65 0
@@ -458,7 +458,7 @@ StartChar: six
 Encoding: 54 54 11
 Width: 916
 VWidth: 0
-Flags: W
+Flags: WO
 LayerCount: 2
 Fore
 SplineSet
@@ -544,17 +544,17 @@ SplineSet
 859.1 1208.41 m 1
  863.986 1198.67 l 1
  859.1 1208.41 l 1
-181.314 1569.26 m 1
- 89.7393 1505.84 -40.3525 1463.79 41.3047 1627.77 c 0
- 90.4707 1726.49 177.496 1801.94 239.828 1891.07 c 0
- 271.616 1932.22 310.543 2004.79 370.842 2000.13 c 0
- 467.814 1992.62 400.567 1749.04 393.355 1684.97 c 0
- 371.486 1490.88 437.52 1257.08 394.569 1071.89 c 0
- 382.238 1018.73 254.457 787.316 184.152 888.341 c 0
- 134.342 959.831 163.979 1171.92 166.686 1257.89 c 0
- 174.189 1362.25 181.314 1464.44 181.314 1569.26 c 1
+181.314 1569.26 m 5
+ 89.7393 1505.84 -40.3525 1463.79 41.3047 1627.77 c 4
+ 90.4707 1726.49 177.496 1801.94 239.828 1891.07 c 4
+ 271.616 1932.22 310.543 2004.79 370.842 2000.13 c 4
+ 467.814 1992.62 400.567 1749.04 393.355 1684.97 c 4
+ 371.486 1490.88 437.52 1257.08 394.569 1071.89 c 4
+ 382.238 1018.73 254.457 787.316 184.152 888.341 c 4
+ 134.342 959.831 163.979 1171.92 166.686 1257.89 c 4
+ 174.189 1362.25 181.314 1464.44 181.314 1569.26 c 5
 620.172 1598.51 m 1
- 588.954 1572.26 459.257 1478.41 467.143 1583.89 c 0
+ 588.954 1572.26 459.257 1478.41 467.143 1583.89 c 4
  473.886 1710.1 623.023 1850.13 690.887 1949.54 c 0
  715.169 1985.12 745.377 2037.37 795.085 2037.37 c 0
  895.027 2037.37 851.58 1777.92 849.328 1715.54 c 0
@@ -586,21 +586,21 @@ SplineSet
  356.445 1019.03 219.021 809.872 166.469 959.306 c 0
  124.144 1081.14 182.254 1200.4 186.364 1321.54 c 0
  189.666 1418.67 168.712 1519.58 191.156 1614.11 c 1
-818.096 1697.7 m 1
- 661.904 1704.4 414.068 1722.95 522.193 1934.49 c 0
- 537.992 1965.67 553.388 1997.53 584.219 2018 c 0
- 664.844 2073.86 797.044 1987.79 887.755 1978.72 c 0
- 966.93 1970.79 1156.15 2057.72 1211.19 1995.8 c 0
- 1295.96 1900.38 1066.14 1763.42 1053.82 1683.77 c 0
- 1046.22 1635.13 1116.71 1586.25 1135.4 1544.39 c 0
- 1180.33 1438.68 1142.6 1299.94 1077.17 1210.08 c 0
- 982.199 1079.65 859.752 990.5 706.639 940.79 c 0
- 648.725 921.996 528.115 898.215 546.254 1001.1 c 0
- 575.4 1166.54 702.334 1164.13 818.096 1223.71 c 0
- 854.276 1242.33 926.012 1282.26 901.688 1333.42 c 0
- 832.027 1485.68 625.555 1249.34 542.646 1275.73 c 0
- 475.592 1297.07 518.182 1380.86 539.455 1419.06 c 0
- 608.893 1543.26 734.504 1586.25 818.096 1697.7 c 1
+818.096 1697.7 m 5
+ 661.904 1704.4 414.068 1722.95 522.193 1934.49 c 4
+ 537.992 1965.67 553.388 1997.53 584.219 2018 c 4
+ 664.844 2073.86 797.044 1987.79 887.755 1978.72 c 4
+ 966.93 1970.79 1156.15 2057.72 1211.19 1995.8 c 4
+ 1295.96 1900.38 1066.14 1763.42 1053.82 1683.77 c 4
+ 1046.22 1635.13 1116.71 1586.25 1135.4 1544.39 c 4
+ 1180.33 1438.68 1142.6 1299.94 1077.17 1210.08 c 4
+ 982.199 1079.65 859.752 990.5 706.639 940.79 c 4
+ 648.725 921.996 528.115 898.215 546.254 1001.1 c 4
+ 575.4 1166.54 702.334 1164.13 818.096 1223.71 c 4
+ 854.276 1242.33 926.012 1282.26 901.688 1333.42 c 4
+ 832.027 1485.68 625.555 1249.34 542.646 1275.73 c 4
+ 475.592 1297.07 518.182 1380.86 539.455 1419.06 c 4
+ 608.893 1543.26 734.504 1586.25 818.096 1697.7 c 5
 EndSplineSet
 Validated: 33
 EndChar
@@ -1827,18 +1827,18 @@ SplineSet
 EndSplineSet
 Fore
 SplineSet
-338.479 1648.17 m 1
- 442.032 1636.6 561.581 1674.71 655.14 1614.36 c 0
- 751.915 1551.94 759.141 1395.38 705.777 1302.03 c 0
- 612.507 1140.22 263.611 866.121 64.4512 999.155 c 0
- -44.8574 1074.02 75.3105 1186.65 150.986 1233.68 c 0
- 208.459 1268.18 533.414 1137.21 468.281 1330.66 c 0
- 419.303 1480.9 255.305 1393.54 165.408 1350.93 c 0
- 120.843 1329.81 60.3398 1325.72 55.9844 1388.56 c 0
- 34.7549 1699.14 201.825 1905.81 482.704 1985.96 c 0
- 536.773 2001.39 655.774 2066.42 708.662 2036.55 c 0
- 774.068 1994.31 690.014 1919.8 659.668 1889.46 c 0
- 551.645 1781.42 388.598 1799.58 338.479 1648.17 c 1
+338.479 1648.17 m 5
+ 442.032 1636.6 561.581 1674.71 655.14 1614.36 c 4
+ 751.915 1551.94 759.141 1395.38 705.777 1302.03 c 4
+ 612.507 1140.22 263.611 866.121 64.4512 999.155 c 4
+ -44.8574 1074.02 75.3105 1186.65 150.986 1233.68 c 4
+ 208.459 1268.18 533.414 1137.21 468.281 1330.66 c 4
+ 419.303 1480.9 255.305 1393.54 165.408 1350.93 c 4
+ 120.843 1329.81 60.3398 1325.72 55.9844 1388.56 c 4
+ 34.7549 1699.14 201.825 1905.81 482.704 1985.96 c 4
+ 536.773 2001.39 655.774 2066.42 708.662 2036.55 c 4
+ 774.068 1994.31 690.014 1919.8 659.668 1889.46 c 4
+ 551.645 1781.42 388.598 1799.58 338.479 1648.17 c 5
 EndSplineSet
 Validated: 33
 EndChar
@@ -2176,9 +2176,9 @@ s8W-!s8W-!s8W-!s8W-!s8W-!s8W-!
 EndImage
 Fore
 SplineSet
-2463.64 518.632 m 1
- 2631.57 484.597 2671.61 580.271 2634.26 751.645 c 1
- 2542.92 723.389 2484.57 615.984 2463.64 518.632 c 1
+2463.64 518.632 m 5
+ 2631.57 484.597 2671.61 580.271 2634.26 751.645 c 5
+ 2542.92 723.389 2484.57 615.984 2463.64 518.632 c 5
 444.746 378.824 m 1
  343.317 413.963 238.463 419.384 182.758 534.166 c 0
  130.607 641.725 179.844 739.389 235.149 829.316 c 0
@@ -2211,16 +2211,16 @@ SplineSet
  1041.88 456.495 1034.58 312.912 1094.7 337.597 c 0
  1144.31 357.946 1169.84 484.363 1179.95 534.166 c 0
  1212.1 695.442 1162.22 935.647 1326.24 1030.76 c 0
-2875.96 316.688 m 1
- 2897.72 215.544 2769.17 -80.8486 2644.81 21.5381 c 0
- 2575.22 79.8682 2653.82 250.807 2561.06 293.712 c 0
- 2476.4 332.222 2255.58 207.777 2193.51 294.986 c 0
- 2146.81 361.736 2236.16 481.055 2269.47 534.166 c 0
- 2364.12 695.38 2469.06 838.885 2583.37 984.658 c 0
- 2634.26 1050.68 2687.13 1140 2776.16 1138.4 c 0
- 2929.38 1134.13 2839.09 779.793 2867.91 673.974 c 0
- 2894.07 579.635 2982.77 648.017 3040.4 606.835 c 0
- 3167.03 516.364 2937.23 351.235 2875.96 316.688 c 1
+2875.96 316.688 m 5
+ 2897.72 215.544 2769.17 -80.8486 2644.81 21.5381 c 4
+ 2575.22 79.8682 2653.82 250.807 2561.06 293.712 c 4
+ 2476.4 332.222 2255.58 207.777 2193.51 294.986 c 4
+ 2146.81 361.736 2236.16 481.055 2269.47 534.166 c 4
+ 2364.12 695.38 2469.06 838.885 2583.37 984.658 c 4
+ 2634.26 1050.68 2687.13 1140 2776.16 1138.4 c 4
+ 2929.38 1134.13 2839.09 779.793 2867.91 673.974 c 4
+ 2894.07 579.635 2982.77 648.017 3040.4 606.835 c 4
+ 3167.03 516.364 2937.23 351.235 2875.96 316.688 c 5
 EndSplineSet
 Validated: 33
 EndChar
@@ -2241,6 +2241,100 @@ SplineSet
  77.2372 -910.674 49.8501 -765.439 0 -720 c 9
 EndSplineSet
 Validated: 33
+EndChar
+
+StartChar: four
+Encoding: 52 52 27
+Width: 962
+VWidth: 0
+Flags: HWO
+LayerCount: 2
+Fore
+SplineSet
+304.559 1441.63 m 1
+ 472.489 1407.6 512.529 1503.27 475.179 1674.64 c 1
+ 383.839 1646.39 325.489 1538.98 304.559 1441.63 c 1
+716.879 1239.69 m 1
+ 738.639 1138.54 610.089 842.151 485.729 944.538 c 0
+ 416.139 1002.87 494.739 1173.81 401.979 1216.71 c 0
+ 317.319 1255.22 96.499 1130.78 34.4287 1217.99 c 0
+ -12.2705 1284.74 77.0791 1404.05 110.389 1457.17 c 0
+ 205.039 1618.38 309.979 1761.88 424.289 1907.66 c 0
+ 475.179 1973.68 528.049 2063 617.079 2061.4 c 0
+ 770.299 2057.13 680.009 1702.79 708.829 1596.97 c 0
+ 734.989 1502.63 823.688 1571.02 881.319 1529.83 c 0
+ 1007.95 1439.36 778.149 1274.24 716.879 1239.69 c 1
+EndSplineSet
+EndChar
+
+StartChar: five
+Encoding: 53 53 28
+Width: 766
+VWidth: 0
+Flags: HW
+LayerCount: 2
+Fore
+SplineSet
+338.479 1648.17 m 5
+ 442.032 1636.6 561.581 1674.71 655.14 1614.36 c 4
+ 751.915 1551.94 759.141 1395.38 705.777 1302.03 c 4
+ 612.507 1140.22 263.611 866.121 64.4512 999.155 c 4
+ -44.8574 1074.02 75.3105 1186.65 150.986 1233.68 c 4
+ 208.459 1268.18 533.414 1137.21 468.281 1330.66 c 4
+ 419.303 1480.9 255.305 1393.54 165.408 1350.93 c 4
+ 120.843 1329.81 60.3398 1325.72 55.9844 1388.56 c 4
+ 34.7549 1699.14 201.825 1905.81 482.704 1985.96 c 4
+ 536.773 2001.39 655.774 2066.42 708.662 2036.55 c 4
+ 774.068 1994.31 690.014 1919.8 659.668 1889.46 c 4
+ 551.645 1781.42 388.598 1799.58 338.479 1648.17 c 5
+EndSplineSet
+EndChar
+
+StartChar: one
+Encoding: 49 49 29
+Width: 490
+VWidth: 0
+Flags: HW
+LayerCount: 2
+Fore
+SplineSet
+181.314 1569.26 m 1
+ 89.7393 1505.84 -40.3525 1463.79 41.3047 1627.77 c 0
+ 90.4707 1726.49 177.496 1801.94 239.828 1891.07 c 0
+ 271.616 1932.22 310.543 2004.79 370.842 2000.13 c 0
+ 467.814 1992.62 400.567 1749.04 393.355 1684.97 c 0
+ 371.486 1490.88 437.52 1257.08 394.569 1071.89 c 0
+ 382.238 1018.73 254.457 787.316 184.152 888.341 c 0
+ 134.342 959.831 163.979 1171.92 166.686 1257.89 c 0
+ 174.189 1362.25 181.314 1464.44 181.314 1569.26 c 1
+467.143 1583.89 m 0
+EndSplineSet
+EndChar
+
+StartChar: three
+Encoding: 51 51 30
+Width: 776
+VWidth: 0
+Flags: HW
+LayerCount: 2
+Fore
+SplineSet
+338.096 1697.7 m 5
+ 181.904 1704.4 -65.9316 1722.95 42.1934 1934.49 c 4
+ 57.9922 1965.67 73.3877 1997.53 104.219 2018 c 4
+ 184.844 2073.86 317.044 1987.79 407.755 1978.72 c 4
+ 486.93 1970.79 676.15 2057.72 731.189 1995.8 c 4
+ 815.96 1900.38 586.14 1763.42 573.82 1683.77 c 4
+ 566.22 1635.13 636.71 1586.25 655.4 1544.39 c 4
+ 700.33 1438.68 662.6 1299.94 597.17 1210.08 c 4
+ 502.199 1079.65 379.752 990.5 226.639 940.79 c 4
+ 168.725 921.996 48.1152 898.215 66.2539 1001.1 c 4
+ 95.4004 1166.54 222.334 1164.13 338.096 1223.71 c 4
+ 374.276 1242.33 446.012 1282.26 421.688 1333.42 c 4
+ 352.027 1485.68 145.555 1249.34 62.6465 1275.73 c 4
+ -4.4082 1297.07 38.1816 1380.86 59.4551 1419.06 c 4
+ 128.893 1543.26 254.504 1586.25 338.096 1697.7 c 5
+EndSplineSet
 EndChar
 EndChars
 EndSplineFont
